@@ -1,5 +1,11 @@
 2008-01-19  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
+	* Makefile.am (WGET_SV_CVS): Renamed from WGETSGO.
+	(WGET_SV_GIT_AC, WGET_SV_GIT_GL, WGET_GCC): New.
+	(fetch): Update to match current upstream locations.
+
+2008-01-19  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
 	* lib/gnupload: Revert last change.  Add pointer to upload
 	instructions of the GNU Maintenance Instructions.
 	Suggestion by Karl Berry.
